--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to URURU Shop!</h1>
-    <p>This is the beginning of your online store.</p>
+    <p>This is the beginning of your online store.</p><button>Add to Cart</button>
 </body>
 </html>
