--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>URURU Shop</title>
-</head>
+</head><script>
+    function showMessage() {
+        alert('Товар добавлен в корзину!');
+    }
+</script>
 <body>
     <h1>Welcome to URURU Shop!</h1>
     <p>This is the beginning of your online store.</p><button>Add to Cart</button>
