--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </script>
 <body>
     <h1>Welcome to URURU Shop!</h1>
-    <p>This is the beginning of your online store.</p><button>Add to Cart</button>
+    <p>This is the beginning of your online store.</p><button onclick="showMessage()">Add to Cart</button>
 </body>
 </html>
