--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <body>
     <h1>Welcome to URURU Shop!</h1>
     <p>This is the beginning of your online store.</p><button onclick="showMessage()">Add to Cart</button>
+    <input type="number" placeholder="Количество" min="1" max="100">
 </body>
 </html>
