--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <h1>Welcome to URURU Shop!</h1>
     <p>This is the beginning of your online store.</p><button onclick="showMessage()">Add to Cart</button>
+    <h2>Описание товара</h2>
+<p>Это описание вашего товара. Здесь вы можете разместить детали, особенности и преимущества товара.</p>
     <input type="number" placeholder="Количество" min="1" max="100">
 </body>
 </html>
