--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <p>This is the beginning of your online store.</p><button onclick="showMessage()">Add to Cart</button>
     <h2>Описание товара</h2>
 <p>Это описание вашего товара. Здесь вы можете разместить детали, особенности и преимущества товара.</p>
+    <div class="product-card">
+    <img src="https://via.placeholder.com/150" alt="Продукт">
+    <h3>Название продукта</h3>
+    <p>Цена: 100₾</p>
+    <button onclick="showMessage()">Добавить в корзину</button>
+</div>
     <input type="number" placeholder="Количество" min="1" max="100">
 </body>
 </html>
