--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
     <h2>Описание товара</h2>
 <p>Это описание вашего товара. Здесь вы можете разместить детали, особенности и преимущества товара.</p>
     <div class="product-card">
+        <div class="product-card">
+    <img src="https://via.placeholder.com/150" alt="Продукт 1">
+    <h3>Название продукта 1</h3>
+    <p>Цена: 100₾</p>
+    <button onclick="showMessage()">Добавить в корзину</button>
+</div>
+
+<div class="product-card">
+    <img src="https://via.placeholder.com/150" alt="Продукт 2">
+    <h3>Название продукта 2</h3>
+    <p>Цена: 150₾</p>
+    <button onclick="showMessage()">Добавить в корзину</button>
+</div>
+
+<div class="product-card">
+    <img src="https://via.placeholder.com/150" alt="Продукт 3">
+    <h3>Название продукта 3</h3>
+    <p>Цена: 200₾</p>
+    <button onclick="showMessage()">Добавить в корзину</button>
+</div>
     <img src="https://via.placeholder.com/150" alt="Продукт">
     <h3>Название продукта</h3>
     <p>Цена: 100₾</p>
