--- a/index.html
+++ b/index.html
@@ -43,3 +43,13 @@
     <input type="number" placeholder="Количество" min="1" max="100">
 </body>
 </html>
+<h2>Свяжитесь с нами</h2>
+<form>
+    <label for="name">Ваше имя:</label><br>
+    <input type="text" id="name" name="name" placeholder="Введите ваше имя"><br><br>
+    <label for="email">Ваш Email:</label><br>
+    <input type="email" id="email" name="email" placeholder="Введите ваш Email"><br><br>
+    <label for="message">Сообщение:</label><br>
+    <textarea id="message" name="message" placeholder="Введите ваше сообщение"></textarea><br><br>
+    <button type="submit">Отправить</button>
+</form>
