--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     }
 </script>
 <body>
+    <header>
+    <div class="logo">
+        <img src="https://via.placeholder.com/100x50" alt="URURU Logo">
+    </div>
+    <nav>
+        <ul>
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Товары</a></li>
+            <li><a href="#">Контакты</a></li>
+        </ul>
+    </nav>
+</header>
     <h1>Welcome to URURU Shop!</h1>
     <p>This is the beginning of your online store.</p><button onclick="showMessage()">Add to Cart</button>
     <h2>Описание товара</h2>
