--- a/index.html
+++ b/index.html
@@ -64,4 +64,8 @@
     <label for="message">Сообщение:</label><br>
     <textarea id="message" name="message" placeholder="Введите ваше сообщение"></textarea><br><br>
     <button type="submit">Отправить</button>
+    <footer>
+    <p>© 2024 URURU. Все права защищены.</p>
+    <p>Свяжитесь с нами: <a href="mailto:info@ururu.com">info@ururu.com</a></p>
+</footer>
 </form>
