--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         </ul>
     </nav>
 </header>
+    <div class="banner">
+    <h1>Добро пожаловать в URURU Shop!</h1>
+    <p>Здесь вы найдете лучшие товары по отличным ценам!</p>
+</div>
     <h1>Welcome to URURU Shop!</h1>
     <p>This is the beginning of your online store.</p><button onclick="showMessage()">Add to Cart</button>
     <h2>Описание товара</h2>
