--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <h1>Добро пожаловать в URURU Shop!</h1>
     <p>Здесь вы найдете лучшие товары по отличным ценам!</p>
 </div>
+    <div class="banner">
+    <h1>Добро пожаловать в URURU Shop!</h1>
+    <p>Здесь вы найдете лучшие товары по отличным ценам!</p>
+</div>
     <h1>Welcome to URURU Shop!</h1>
     <p>This is the beginning of your online store.</p><button onclick="showMessage()">Add to Cart</button>
     <h2>Описание товара</h2>
