--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     </nav>
 </header>
     <div class="banner">
+        <section class="about">
+    <h2>О нас</h2>
+    <p>URURU Shop - это место, где вы найдете лучшие товары для вашего дома и семьи. Мы работаем, чтобы сделать вашу жизнь проще и комфортнее.</p>
+</section>
     <h1>Добро пожаловать в URURU Shop!</h1>
     <p>Здесь вы найдете лучшие товары по отличным ценам!</p>
 </div>
