--- a/index.html
+++ b/index.html
@@ -80,4 +80,13 @@
     <p>© 2024 URURU. Все права защищены.</p>
     <p>Свяжитесь с нами: <a href="mailto:info@ururu.com">info@ururu.com</a></p>
 </footer>
+    <section class="contact">
+    <h2>Свяжитесь с нами</h2>
+    <p>Если у вас есть вопросы или предложения, пожалуйста, свяжитесь с нами:</p>
+    <ul>
+        <li>Email: <a href="mailto:info@ururu.com">info@ururu.com</a></li>
+        <li>Телефон: +123-456-7890</li>
+        <li>Адрес: г. Тбилиси, ул. Главная, д. 1</li>
+    </ul>
+</section>
 </form>
